# MiroFish

./: .env.example  Dockerfile  README-SETUP.md  docker-compose.yml  package.json
backend/: pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py
backend/app/api/: graph.py  report.py  simulation.py
backend/app/services/: graph_builder.py  oasis_profile_generator.py  ontology_generator.py  report_agent.py  simulation_config_generator.py  simulation_runner.py  zep_entity_reader.py  zep_graph_memory_updater.py  zep_tools.py
backend/app/services/graph_provider/: __init__.py  base.py  factory.py  graphiti_local_provider.py  models.py  zep_cloud_provider.py
backend/app/utils/: locale.py  ontology_normalizer.py
backend/scripts/: run_parallel_simulation.py  run_reddit_simulation.py  run_twitter_simulation.py  test_profile_format.py
backend/tests/: test_ontology_normalizer.py
frontend/: vite.config.js
frontend/src/i18n/: index.js
locales/: languages.json
